--- a/entry-1.html
+++ b/entry-1.html
@@ -1,10 +1,11 @@
 <!doctype html>
 <html>
   <head>
-    <title>Hello, world!</title>
+    <title>entry-1</title>
+    <link rel="icon" type="image/x-icon" href="favicon.png">
   </head>
   <body>
-    <h1>Hello, world!</h1>
-    <p>This is my first web page. There are many like it but this one is mine</p>
+    <h1>hi</h1>
+    <p>Tinfo</p>
   </body>
 </html> 
