--- a/entry-01.html
+++ b/entry-01.html
@@ -1,8 +1,8 @@
 <!doctype html>
 <html>
   <head>
-    <title>entry-1</title>
-    <link rel="icon" type="image/x-icon" href="favicon.png">
+    <title>entry-01</title>
+    <link rel="icon" type="image/x-icon" href="/images/favicon.png">
   </head>
   <body>
     <h1>hi</h1>
