--- a/entry-01.html
+++ b/entry-01.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>entry-01</title>
-    <link rel="icon" type="image/x-icon" href="favicon.png">
+    <link rel="icon" type="image/x-icon" href="images/favicon.png">
     <meta charset="utf-08" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
   </head>
