--- a/entry-01.html
+++ b/entry-01.html
@@ -3,11 +3,13 @@
   <head>
     <title>entry-01</title>
     <link rel="icon" type="image/x-icon" href="images/favicon.png">
+    <link rel="stylesheet" href="style.css"
+    <link rel="stylesheet" href="https://use.typekit.net/eft2qeb.css"> 
     <meta charset="utf-08" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
   </head>
   <body>
-    <h1>hi</h1>
+    <h1 class="heading">love letters to colour</h1>
     <p>Tinfo</p>
   </body>
 </html> 
