--- a/entry-01.html
+++ b/entry-01.html
@@ -9,7 +9,11 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
   </head>
   <body>
-    <h1 class="heading">love letters to colour</h1>
+   <div>
+    <h1 class="heading">love letters to colour</h1><br>
+    <p class="italic-name">by</p>
+    <p class="name">Anushka Vhatkar</p>
+  </div> 
     <p>Tinfo</p>
   </body>
 </html> 
