--- a/entry-01.html
+++ b/entry-01.html
@@ -11,7 +11,7 @@
   <body>
    <div>
     <h1 class="heading">love letters to colour</h1><br>
-    <p class="italic-name">by</p>
+    <p class="name"> <span class="italic-name">by</span>Anushka Vhatkar </p>
     <p class="name">Anushka Vhatkar</p>
   </div> 
     <p>Tinfo</p>
