--- a/entry-01.html
+++ b/entry-01.html
@@ -9,10 +9,12 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
   </head>
   <body>
-   <div>
-    <h1 class="heading">love letters to colour</h1><br>
+   <header>
+    <h1 class="heading">love letters to colour</h1>
     <p class="name"> <span class="italic-name">by</span> Anushka Vhatkar </p>
-  </div> 
+   </header> 
+
+  <div></div>
     <p>Tinfo</p>
   </body>
 </html> 
