--- a/entry-01.html
+++ b/entry-01.html
@@ -7,12 +7,17 @@
     <link rel="stylesheet" href="https://use.typekit.net/eft2qeb.css"> 
     <meta charset="utf-08" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+    <style>
+      @import url("https://use.typekit.net/eft2qeb.css");
+    </style>
   </head>
+  <!-- -------- -->
   <body>
    <header>
     <h1 class="heading">love letters to colour</h1>
     <p class="name"> <span class="italic-name">by</span> Anushka Vhatkar </p>
    </header> 
+<!-- ------- -->
 
   <div></div>
     <p>Tinfo</p>
