--- a/entry-01.html
+++ b/entry-01.html
@@ -20,8 +20,8 @@
 <!-- ------- -->
 
 <main id="background">
+<h2 id="heading2"><em>entry 01: exposition</em></h2>
 
-  
 </main>
     <p>Tinfo</p>
   </body>
