--- a/entry-01.html
+++ b/entry-01.html
@@ -20,7 +20,7 @@
 <!-- ------- -->
 
 <main id="background">
-<h2 id="heading2"><em>entry 01: exposition</em></h2>
+<h2 id="heading2"> <span class="italic-heading2"> entry 01:</span> exposition</h2>
 
 </main>
     <p>Tinfo</p>
