--- a/entry-01.html
+++ b/entry-01.html
@@ -22,6 +22,12 @@
 <main id="background">
 <h2 id="heading2"> <span class="italic-heading2"> entry 01: </span> exposition</h2>
 
+<div class="flex-parent-1">
+  <div class="flex-child-image-1">flex column1</div>
+  <div class="flex-child-textbox-1">flex column 2</div>
+</div>
+
+
     <p>Tinfo</p>
   </body>
 
@@ -46,7 +52,7 @@
 
 
 
-  
+
 </main>
   <!-- -------- -->
 </html> 
