--- a/entry-01.html
+++ b/entry-01.html
@@ -23,7 +23,8 @@
 <h2 id="heading2"> <span class="italic-heading2"> entry 01: </span> exposition</h2>
 
 <div class="parent-1">
-  <div class="child-1">child 1</div>
+  <div class="child-1">
+    <img class="fit-picture" src="images/image-04.jpeg"> </div>
   <div class="child-2">child 2</div>
 </div>
 
