--- a/entry-01.html
+++ b/entry-01.html
@@ -24,7 +24,7 @@
 
 <div class="parent-1">
   <div class="child-1">
-    <img class="fit-picture" src="images/image-04.jpeg"> </div>
+    <img class="fit-picture" src="images/image-04.jpeg" align="left"> </div>
   <div class="child-2">child 2</div>
 </div>
 
