--- a/entry-01.html
+++ b/entry-01.html
@@ -22,10 +22,9 @@
 <main id="background">
 <h2 id="heading2"> <span class="italic-heading2"> entry 01: </span> exposition</h2>
 
-<div class="parent-1">
-  <div class="child-1">
+  <div>
     <img class="fit-picture" src="images/image-04.jpeg" align="left"> </div>
-  <div class="child-2">child 2</div>
+ </div>
 </div>
 
     <p>Tinfo</p>
