--- a/entry-01.html
+++ b/entry-01.html
@@ -24,8 +24,10 @@
 
   <div> <img class="fit-picture" src="images/image-04.jpeg" align="left"> </div>
 
-<p class="bodytext"> Color has fascinated me for as long as I can remember. I didn't quite understand how 
-  it worked when I was much younger. It definitely felt like magic in a lot of ways. Having
+<p class="bodytext"> Colour has fascinated me for as long as I can remember. I didn't quite understand how 
+  it worked when I was much younger. It definitely felt like magic in a lot of ways. Having understood how 
+  it works now, it still feels like magic. My harmonic collection is an ode to everything that thrills me about colour. 
+  It is a journey into learning and designing information just as I learn to interpret code.
 </p> 
 
 
