--- a/entry-01.html
+++ b/entry-01.html
@@ -27,7 +27,7 @@
 <p class="bodytext"> Colour has fascinated me for as long as I can remember. I didn't quite understand how 
   it worked when I was much younger. It definitely felt like magic in a lot of ways. Having understood how 
   it works now, it still feels like magic. My harmonic collection is an ode to everything that thrills me about colour. 
-  It is a journey into learning and designing information just as I learn to interpret code.
+  It is a journey into learning and designing information just as I learn to write and interpret code.
 </p> 
 
 
