--- a/entry-01.html
+++ b/entry-01.html
@@ -30,6 +30,10 @@
   It is a journey into learning and designing information just as I learn to write and interpret code.
 </p> 
 
+<p class="bodytext" align="center">
+  So let's start with something mildly boring (obviously):
+  
+</p>
 
      <p>Tinfo</p>
   </body>
