--- a/entry-01.html
+++ b/entry-01.html
@@ -30,7 +30,7 @@
   It is a journey into learning and designing information just as I learn to write and interpret code.
 </p> 
 
-<p class="bodytext" align="center">
+<p class="bodytext">
   So let's start with something mildly boring (obviously):
 
 </p>
