--- a/entry-01.html
+++ b/entry-01.html
@@ -32,9 +32,9 @@
 
 <p class="bodytext">
   So let's start with something mildly boring (obviously):
-
 </p>
 
+<img class="fit-picture" src="images/image-02.gif" align="center" margin-right="10rem">
      <p>Tinfo</p>
   </body>
 
