--- a/entry-01.html
+++ b/entry-01.html
@@ -34,7 +34,7 @@
   So let's start with something mildly boring (obviously):
 </p>
 
-<img class="fit-picture" src="images/image-02.gif" align="center" margin-right="10rem">
+<img class="fit-picture" src="images/image-02.gif" align="center">
      <p>Tinfo</p>
   </body>
 
