--- a/entry-01.html
+++ b/entry-01.html
@@ -22,7 +22,7 @@
 <main id="background">
 <h2 id="heading2"> <span class="italic-heading2"> entry 01: </span> exposition</h2>
 
-  <div> <img class="fit-picture" src="images/image-04.jpeg" align="left" margin-left="10rem"> </div>
+  <div> <img class="fit-picture" src="images/image-04.jpeg" align="left"> </div>
 
 <p class="bodytext"> Colour has fascinated me for as long as I can remember. I didn't quite understand how 
   it worked when I was much younger. It definitely felt like magic in a lot of ways. Having understood how 
