--- a/entry-01.html
+++ b/entry-01.html
@@ -34,7 +34,7 @@
   So let's start with something mildly boring (obviously):
 </p>
 
-<div> <img class="fit-picture" src="images/image-02.gif" text-align="center" margin-top="-10rem"></div>
+<div> <img src="images/image-02.gif" text-align="center"></div>
 
      <p>Tinfo</p>
   </body>
