--- a/entry-01.html
+++ b/entry-01.html
@@ -34,7 +34,8 @@
   So let's start with something mildly boring (obviously):
 </p>
 
-<div> <img src="images/image-02.gif" text-align="center"></div>
+<img src="images/image-02.gif" text-align="center" width="350px">
+
 
      <p>Tinfo</p>
   </body>
