--- a/entry-01.html
+++ b/entry-01.html
@@ -31,11 +31,14 @@
 </p> 
 
 <p class="bodytext">
-  So let's start with something mildly boring (obviously):
+  So let's start with something mildly boring:
 </p>
 
 <img src="images/image-02.gif" text-align="center" width="350px">
 
+<p class="bodytext"> If I told my younger self this wave completes 1 oscillation in 3 seconds, 7-year-old me 
+  <i>might</i> be able to tell its frequency is 0.33 (probably wouldn't know the unit though).</p>
+  
 
      <p>Tinfo</p>
   </body>
