--- a/entry-01.html
+++ b/entry-01.html
@@ -37,8 +37,12 @@
 <img src="images/image-02.gif" text-align="center" width="350px">
 
 <p class="bodytext"> If I told my younger self this wave completes 1 oscillation in 3 seconds, 7-year-old me 
-  <i>might</i> be able to tell its frequency is 0.33 (probably wouldn't know the unit though).</p>
-  
+  <i>might</i> be able to tell its frequency is 0.33.
+
+And if light is a wave, then it must have a frequency.<br>
+It does. Turns out we already have a name for the frequency of light: <i>color</i></p>
+
+
 
      <p>Tinfo</p>
   </body>
