--- a/entry-01.html
+++ b/entry-01.html
@@ -37,11 +37,11 @@
 <img src="images/image-02.gif" text-align="center" width="350px">
 
 <p class="bodytext"> 
-  <ul>
+  <ul class="bodytext">
    <li>If I told my younger self this wave completes 1 oscillation in 3 seconds, 7-year-old me 
     <i>might</i> be able to tell its frequency is 0.33.</li>
     <br><li>And if light is a wave, then it must have a frequency. It does.</li>
-  <br><li>&nbsp; &nbsp; &nbsp; Turns out we already have a name for the frequency of light: <i>color.</i></li>
+  <br>&nbsp; &nbsp; &nbsp; Turns out we already have a name for the frequency of light: <i>color.</i>
 
 </p></ul>
 
