--- a/entry-01.html
+++ b/entry-01.html
@@ -42,7 +42,10 @@
     <i>might</i> be able to tell its frequency is 0.33.</li>
     <br><li>And if light is a wave, then it must have a frequency. It does.</li>
   <br>&nbsp; &nbsp; &nbsp; Turns out we already have a name for the frequency of light: <i>color.</i>
-
+    <li>Color, really, seems to be nothing more than a measure of how quickly the light waves are waving</li>
+    <li>If our eyes were quickly enough, we would've been able to see observe this periodic motion <i>(just like we can see this wave!).</i></li>
+    <li>The frequency of the light we see is so high, we cannot possibly see it as a wave. It waves up and down more than 400 million <i>million</i> times a second.</li>
+    <li>But you're secretly a data-processor: you can tell by looking at the color of a light wave, what its frequency is.</li>
 </p></ul>
 
 
