--- a/entry-01.html
+++ b/entry-01.html
@@ -44,7 +44,7 @@
     <i>might</i> be able to tell its frequency is 0.33.</li>
     <br><li>And if light is a wave, then it must have a frequency. It does.</li>
   <br>&nbsp; &nbsp; &nbsp; Turns out we already have a name for the frequency of light: <i>color.</i>
-  <br> <li>Color, really, seems to be nothing more than a measure of how quickly the light waves are waving</li>
+  <br><br><li>Color, really, seems to be nothing more than a measure of how quickly the light waves are waving</li>
     <li>If our eyes were quick enough, we would've been able to see observe this periodic motion <i>(just like we can see this wave!).</i></li>
     <li>The frequency of the light we see is so high, we cannot possibly see it as a wave. It waves up and down more than 400 million <i>million</i> times a second.</li>
     <li>But you're secretly a data-processor: you can tell by looking at the color of a light wave what its frequency is.</li>
@@ -53,15 +53,23 @@
     And in between, all the other frequencies form a continuous band of color called the <i>visible spectrum.</i> 
     </p></ul>
 
-<img src="images/image-06.png" text-align="center" width="400px">
+<img class="centerimage" src="images/image-06.png" text-align="center" width="400px">
 
 <!-- ----------- -->
+<div> 
+<img class="fit-picture" src="images/image-05.jpeg" align="right" margin-right="10rem"></div>
+
+<p class="bodytext">
+Say you have a yellow coloured object sitting on your desk. The sun emits all colors (all frequencies!)
+of light, so light of all colors is hitting this object. It appears yellow because it reflects yellow light 
+more than any other colour. <i>What about blue, purple, and red light waves?</i> They are absorbed, and 
+their energy is converted to heat. 
+</p>
 
 
 
 
 
-     <p>Tinfo</p>
   </body>
 
 
