--- a/entry-01.html
+++ b/entry-01.html
@@ -57,14 +57,23 @@
 
 <!-- ----------- -->
 <div> 
-<img class="fit-picture" src="images/image-05.jpeg" align="right" margin-right="10rem"></div>
+<img class="fit-picture" src="images/image-05.png" align="right" margin-right="10rem"></div>
 
 <p class="bodytext">
 Say you have a yellow coloured object sitting on your desk. The sun emits all colors (all frequencies!)
-of light, so light of all colors is hitting this object. It appears yellow because it reflects yellow light 
-more than any other colour. <i>What about blue, purple, and red light waves?</i> They are absorbed, and 
+of light, so light of all colors is hitting this object. It <i>appears</i> yellow because it reflects yellow light 
+more than any other colour. <i>What about blue, purple, and red light waves?</i> &nbsp; They are absorbed, and 
 their energy is converted to heat. 
-</p>
+
+<br> So in a way, the color we perceive an object to be is precisely the object it <i>isn't</i></p>
+
+<div>
+  <img src="images/image-03" width="500px" align="center" margin-left="10rem" margin-right="10rem">
+</div>
+
+
+
+
 
 
 
