--- a/entry-01.html
+++ b/entry-01.html
@@ -68,7 +68,7 @@ their energy is converted to heat.
 <br> So in a way, the color we perceive an object to be is precisely the object it <i>isn't</i></p>
 
 <div>
-  <img src="images/image-03" width="500px" align="center" margin-left="10rem" margin-right="10rem">
+  <img src="images/image-03.png" width="500px" align="center" margin-left="10rem" margin-right="10rem">
 </div>
 
 
