--- a/entry-01.html
+++ b/entry-01.html
@@ -63,15 +63,21 @@
 Say you have a yellow coloured object sitting on your desk. The sun emits all colors (all frequencies!)
 of light, so light of all colors is hitting this object. It <i>appears</i> yellow because it reflects yellow light 
 more than any other colour. <i>What about blue, purple, and red light waves?</i> &nbsp; They are absorbed, and 
-their energy is converted to heat. 
+their energy is converted to heat.<br>
 
-<br> So in a way, the color we perceive an object to be is precisely the object it <i>isn't</i></p>
+<br> So in a way, the color we perceive an object to be is precisely the object it <i>isn't.</i></p>
 
 <div>
-  <img src="images/image-03.png" width="500px" align="center" margin-left="10rem" margin-right="10rem">
+  <img class="centerimage" src="images/image-03.png" width="500px" text-align="center">
 </div>
 
+<article>
+  <footer class="foot">
 
+
+    
+  </footer>
+</article>
 
 
 
