--- a/entry-01.html
+++ b/entry-01.html
@@ -68,14 +68,14 @@ their energy is converted to heat.<br>
 <br> So in a way, the color we perceive an object to be is precisely the object it <i>isn't.</i></p>
 
 <div>
-  <img class="centerimage" src="images/image-03.png" width="500px" text-align="center">
+  <img class="fit-picture" src="images/image-03.png" width="600px" align="left" margin-left="10rem">
 </div>
 
 <article>
   <footer class="foot">
+<br><br><br>
 
 
-    
   </footer>
 </article>
 
