--- a/entry-01.html
+++ b/entry-01.html
@@ -68,7 +68,7 @@ their energy is converted to heat.<br>
 <br> So in a way, the color we perceive an object to be is precisely the object it <i>isn't.</i></p>
 
 <div>
-  <img class="fit-picture" src="images/image-03.png" width="600px" align="left" margin-left="10rem">
+  <img class="leftcenterimage" src="images/image-03.png" width="600px" text-align="center">
 </div>
 
 <article>
