general edits+setup. adding bg color

--- a/entry-02.html
+++ b/entry-02.html
@@ -1,11 +1,11 @@
 <!doctype html>
 <html>
   <head>
-    <title>entry-01</title>
+    <title>entry-02</title>
     <link rel="icon" type="image/x-icon" href="images/favicon.png">
     <link rel="stylesheet" href="style-02.css">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://use.typekit.net/eft2qeb.css"> 
+    <link rel="stylesheet" href="reset.css">
     <meta charset="utf-08" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <style>
@@ -15,12 +15,13 @@
   <!-- ----------- -->
   <body>
 <div class="wrapper">
-    
+<p>hello world</p>
+
+
+
+
+
+
+
 </div>
-
-
-
-
-
-
   </body>
