--- a/index.html
+++ b/index.html
@@ -2,10 +2,14 @@
 <html>
   <head>
     <title>Harmonic Collection</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="reset.css">
+    <meta charset="utf-08" />
+    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
   </head>
   <body>
-    <h1>Harmonic Collection</h1>
-    <p>Anushka Vhatkar</p>
+    <h1>harmonic Collection</h1>
+    <p>anushka vhatkar</p>
     <ul>
       <li><a href="entry-01.html">Entry 01</a></li>
       <li><a href="entry-02.html">Entry 02</a></li>
