--- a/entry-02.html
+++ b/entry-02.html
@@ -15,7 +15,13 @@
   <!-- ----------- -->
   <body>
 <div class="wrapper">
-<p>hello world</p>
+    <div class="page-title">
+     <p>feeling blue?</p>   
+    </div>
+    <div class="body-text">
+        <p>hello world</p>
+    </div>
+
 
 
 
