--- a/entry-02.html
+++ b/entry-02.html
@@ -15,12 +15,34 @@
   <!-- ----------- -->
   <body>
 <div class="wrapper">
-    <div class="page-title">
-     <p>feeling blue?</p>   
+ <!-- section 01-->
+    <div> 
+    <div class="float-left">
+     <p class="page-title">feeling blue?</p> 
+     <p class="body-text"> <span> entry 02: </span> rising action</p>  
+
+        <div class="float-left">
+        <img src="images/image-07.jpg" alt="picture of flamingo" class="float-left images" width="300px"> 
+         </div>
+
+
+
+    <div class="section-01">
+        <p>From <a href="https://anushkavhatkar.github.io/harmonic-collection/entry-01.html" class="underline">last week, </a> I've learnt that objects contain <span>pigments:</span> organic molecules that absorb every color except the one that we see. The color they reflect is the color the object appears to be. In the natural world, though, animals don't make these pigments from scratch: they're made from ingredients in our diet <span>(You are what you eat?).</span> Flamingoes, for example, are born grey. They turn pink because of the carotenoids in their diet from the crustaceans they eat. This reigns true for reds, browns, oranges, yellows, and browns. And for plants, greens. But not so for blue. 
+        </p>
     </div>
-    <div class="body-text">
-        <p>hello world</p>
     </div>
+    </div>
+
+
+<!-- section 02 -->
+    <div>
+
+    
+
+
+    </div>
+
 
 
 
