added section 02 butterfly images

--- a/entry-02.html
+++ b/entry-02.html
@@ -34,12 +34,16 @@
     </div>
 
 
+
 <!-- section 02 -->
     <div>
+        <img src="images/image-08.jpg" alt="blue morpho butterfly image" width="275px" class="images">
+        <img src="images/image-09.jpg" alt="blue morpho butterfly close up" width="400px" class="images">
+        <img src="images/image-10.jpg" alt="blue morpho butterfly" width="285px" class="images">
+    </div>
 
-    
-
-
+    <div>
+        
     </div>
 
 
