--- a/entry-02.html
+++ b/entry-02.html
@@ -15,7 +15,7 @@
   <!-- ----------- -->
   <body>
 <div class="wrapper">
- <!-- section 01-->
+ <!-- section 01 header + intro + flamingo image -->
     <div> 
     <div class="float-left">
      <p class="page-title">feeling blue?</p> 
@@ -27,7 +27,7 @@
                 <div class="float-left">
                 <img src="images/image-07.jpg" alt="picture of flamingo" class="float-left images" width="275px"> 
                  </div>   
-            <p class="float-right"> 
+            <p class="float-right" style="text-align: justify;"> 
                 &nbsp; &nbsp; &nbsp; From <a href="https://anushkavhatkar.github.io/harmonic-collection/entry-01.html" class="underline">last week,</a> I've learnt that objects contain <span>pigments:</span> organic molecules that absorb every color except the one that we see. The color they reflect is the color the object appears to be. In the natural world, though, animals don't make these pigments from scratch: they're made from ingredients in our diet <span>(You are what you eat?).</span> Flamingoes, for example, are born grey. They turn pink because of the carotenoids in their diet from the crustaceans they eat. This reigns true for reds, browns, oranges, yellows, and browns. And for plants, greens. But not so for blue. </p>
         </p>
     </div>
@@ -35,17 +35,31 @@
 
 
 
-<!-- section 02 -->
-    <div>
-        <img src="images/image-08.jpg" alt="blue morpho butterfly image" width="275px" class="images">
-        <img src="images/image-09.jpg" alt="blue morpho butterfly close up" width="400px" class="images">
+<!-- section 02 butterfly images -->
+    <div style="text-align: center;">
+        <img src="images/image-08.jpg" alt="blue morpho butterfly image" width="250px" class="images">
+        <img src="images/image-09.jpg" alt="blue morpho butterfly close up" width="360px" class="images">
         <img src="images/image-10.jpg" alt="blue morpho butterfly" width="285px" class="images">
     </div>
 
-    <div>
-        
-    </div>
 
+<!-- section 03 structural colour info -->
+<div>
+    <p class="body-text" style="text-align: center; margin-top: 10px;">
+        If you've ever observed these <span>blue morpho butterflies</span>, you'll notice the beautiful hues and iridescence of their wings. This iridescence occurs because there's <span> no </span> blue pigment in these butterflies (and other animals exhibiting an outward blue colour)<br></p>
+
+        <p class="body-text" style="text-align: left;">
+            <br>...So they're blue, but not really blue. In fact, many of the natural blues seen in nature are made from <span> structural colour</span>: microscopic structures that interfere with light to reflect color back to our eyes. Going further with our butterfly example, if you microsopically zoom into a butterfly's wing scale, you'd see little ridges. If you slice across the scale, and look even closer, you'd see that the ridges are shaped like tiny Christmas trees.
+        </p>
+    </p>
+</div>
+
+<!-- section 04 -->
+<div style="text-align: center;">
+    <br><img src="images/image-12.jpeg" alt="blue morpho wing scale" height="350px" class="images">
+    <img src="images/image-11.png" alt="blue morpho ridges" height="350px" class="images">
+
+</div>
 
 
 
