--- a/entry-02.html
+++ b/entry-02.html
@@ -54,15 +54,17 @@
     </p>
 </div>
 
-<!-- section 04 -->
+<!-- section 04 butterfly wing ridge images -->
 <div style="text-align: center;">
     <br><img src="images/image-12.jpeg" alt="blue morpho wing scale" height="350px" class="images">
     <img src="images/image-11.png" alt="blue morpho ridges" height="350px" class="images">
-
 </div>
 
-
-
+<!-- section 04 -->
+<div>
+    <p class="body-text" style="text-align: center; margin-top: 30px;">
+        The arrangement of these ridges is what gives blue morpho butterflies their distinct, iridescent hue. When light comes in, some bounces off the top surface. Some light waves pass into the layer and reflect off the bottom surface. For most colours of light, waves reflecting from the top and bottom will be <span>out of phase,</span> and will cancel each other out. That light is removed. Blue light has just the right wavelength, and its reflected waves are in sync. This color makes it to our eye, making the butterfly appear blue. This hall of mirrors only lets blue light escape. It even has a pigment at its base that further absorbs stray red and green light to make the blue purer. </p>
+</div>
 
 
 
