added section 05 and section 06

--- a/entry-02.html
+++ b/entry-02.html
@@ -61,14 +61,32 @@
 </div>
 
 <!-- section 04 -->
-<div>
-    <p class="body-text" style="text-align: center; margin-top: 30px;">
+<p>
+<div class="section-04">
+    <p class="body-text" style="text-align: justify; margin-top: 30px; width: 550px;">
         The arrangement of these ridges is what gives blue morpho butterflies their distinct, iridescent hue. When light comes in, some bounces off the top surface. Some light waves pass into the layer and reflect off the bottom surface. For most colours of light, waves reflecting from the top and bottom will be <span>out of phase,</span> and will cancel each other out. That light is removed. Blue light has just the right wavelength, and its reflected waves are in sync. This color makes it to our eye, making the butterfly appear blue. This hall of mirrors only lets blue light escape. It even has a pigment at its base that further absorbs stray red and green light to make the blue purer. </p>
+    </div>
+    <div>
+    <img src="images/image-13.png" alt="waves reflecting" class="images" style="height: 300px; text-align: right;">
+    </div>
+</p>
+
+
+
+<!-- section 05 -->
+<div>
+    <p class="body-text" style="text-align: center;">
+        So that's how we get this awesome, iridescent blue: the structure of the wing itself. All through the way light bends when it moves from air into another material. 
+
+        Other artifacts from the natural world that also appear blue: blue eyes, bird feathers, etc also contain these microscopic structures. They're just arranged and bound together differently, giving a slightly different sheen to each living thing. All of them add and subtract light waves thanks to their internal structures, not due to their pigments. 
+
+        <br><br>No vertebrate, not a single bird or mammal or reptile that we know of, makes a blue pigment on its body. In fact, there's only <span>one</span> butterfly that's cracked the code for producing a true, blue pigment: the Obrina olivewing. <span>Making blue one of the rarest colors in the natural world.</span>
+
+    </p>
 </div>
 
 
 
-
-
+</div>
 </div>
   </body>
