--- a/entry-02.html
+++ b/entry-02.html
@@ -13,7 +13,7 @@
     </style>
   </head>
   <!-- ----------- -->
-  <body>
+  <body style="margin-bottom: 200px;">
 <div class="wrapper">
  <!-- section 01 header + intro + flamingo image -->
     <div> 
