--- a/entry-01/index.html
+++ b/entry-01/index.html
@@ -2,10 +2,10 @@
 <html>
   <head>
     <title>entry-01</title>
-    <link rel="icon" type="image/x-icon" href="/images/favicon.png">
-    <link rel="stylesheet" href="/entry-01/style-01.css">
-    <link rel="stylesheet" href="/styles/style.css">
-    <link rel="stylesheet" href="/styles/reset.css">
+    <link rel="icon" type="image/x-icon" href="../images/favicon.png">
+    <link rel="stylesheet" href="../entry-01/style-01.css">
+    <link rel="stylesheet" href="../styles/style.css">
+    <link rel="stylesheet" href="../styles/reset.css">
     <link rel="stylesheet" href="https://use.typekit.net/eft2qeb.css"> 
     <meta charset="utf-08" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
