--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <h1>harmonic Collection</h1>
     <p>anushka vhatkar</p>
     <ul>
-      <li><a href="/harmonic-collection/entry-01/index.html"">Entry 01</a></li>
-      <li><a href="/harmonic-collection/entry-02/index.html">Entry 02</a></li>
+      <li><a href="../entry-01/index.html"">Entry 01</a></li>
+      <li><a href="../entry-02/index.html">Entry 02</a></li>
     </ul>
   </body>
 </html>
