--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <ul>
       <li><a href="entry-01/index.html">Entry 01</a></li> 
       <li><a href="entry-02/index.html">Entry 02</a></li>
+      <li><a href="entry-03/index.html">Entry 03</a></li>
     </ul>
   </body>
 </html>
