--- a/entry-01/index.html
+++ b/entry-01/index.html
@@ -24,7 +24,7 @@
 <main id="background">
 <h2 id="heading2"> <span class="italic-heading2"> entry 01: </span> exposition</h2>
 
-  <div> <img class="fit-picture" src="images/image-04.jpeg" align="left" margin-left="10rem"> </div>
+  <div> <img class="fit-picture" src="image-04.jpeg" align="left" margin-left="10rem"> </div>
 
 <p class="bodytext"> Colour has fascinated me for as long as I can remember. I didn't quite understand how 
   it worked when I was much younger. It definitely felt like magic in a lot of ways. Having understood how 
@@ -38,7 +38,7 @@
   So let's start with something mildly boring:
 </p>
 
-<img src="images/image-02.gif" text-align="center" width="350px">
+<img src="image-02.gif" text-align="center" width="350px">
 
 <p class="bodytext"> 
   <ul class="bodytext">
@@ -55,11 +55,11 @@
     And in between, all the other frequencies form a continuous band of color called the <i>visible spectrum.</i> 
     </p></ul>
 
-<img class="centerimage" src="images/image-06.png" text-align="center" width="400px">
+<img class="centerimage" src="image-06.png" text-align="center" width="400px">
 
 <!-- ----------- -->
 <div> 
-<img class="fit-picture" src="images/image-05.png" align="right" margin-right="10rem"></div>
+<img class="fit-picture" src="image-05.png" align="right" margin-right="10rem"></div>
 
 <p class="bodytext">
 Say you have a yellow coloured object sitting on your desk. The sun emits all colors (all frequencies!)
@@ -70,7 +70,7 @@ their energy is converted to heat.<br>
 <br> So in a way, the color we perceive an object to be is precisely the object it <i>isn't.</i></p>
 
 <div>
-  <img class="leftcenterimage" src="images/image-03.png" width="600px" text-align="center">
+  <img class="leftcenterimage" src="image-03.png" width="600px" text-align="center">
 </div>
 
 <article>
