added correct link to entry-02 index

--- a/entry-02/index.html
+++ b/entry-02/index.html
@@ -25,7 +25,7 @@
     <div class="section-01">
         <p>
                 <div class="float-left">
-                <img src="images/image-07.jpg" alt="picture of flamingo" class="float-left images" width="275px"> 
+                <img src="image-07.jpg" alt="picture of flamingo" class="float-left images" width="275px"> 
                  </div>   
             <p class="float-right" style="text-align: justify;"> 
                 &nbsp; &nbsp; &nbsp; From <a href="https://anushkavhatkar.github.io/harmonic-collection/entry-01.html" class="underline">last week,</a> I've learnt that objects contain <span>pigments:</span> organic molecules that absorb every color except the one that we see. The color they reflect is the color the object appears to be. In the natural world, though, animals don't make these pigments from scratch: they're made from ingredients in our diet <span>(You are what you eat?).</span> Flamingoes, for example, are born grey. They turn pink because of the carotenoids in their diet from the crustaceans they eat. This reigns true for reds, browns, oranges, yellows, and browns. And for plants, greens. But not so for blue. </p>
@@ -37,9 +37,9 @@
 
 <!-- section 02 butterfly images -->
     <div style="text-align: center;">
-        <img src="images/image-08.jpg" alt="blue morpho butterfly image" width="250px" class="images">
-        <img src="images/image-09.jpg" alt="blue morpho butterfly close up" width="360px" class="images">
-        <img src="images/image-10.jpg" alt="blue morpho butterfly" width="285px" class="images">
+        <img src="image-08.jpg" alt="blue morpho butterfly image" width="250px" class="images">
+        <img src="image-09.jpg" alt="blue morpho butterfly close up" width="360px" class="images">
+        <img src="image-10.jpg" alt="blue morpho butterfly" width="285px" class="images">
     </div>
 
 
@@ -56,8 +56,8 @@
 
 <!-- section 04 butterfly wing ridge images -->
 <div style="text-align: center;">
-    <br><img src="images/image-12.jpeg" alt="blue morpho wing scale" height="350px" class="images">
-    <img src="images/image-11.png" alt="blue morpho ridges" height="350px" class="images">
+    <br><img src="image-12.jpeg" alt="blue morpho wing scale" height="350px" class="images">
+    <img src="image-11.png" alt="blue morpho ridges" height="350px" class="images">
 </div>
 
 <!-- section 04 -->
@@ -67,7 +67,7 @@
         The arrangement of these ridges is what gives blue morpho butterflies their distinct, iridescent hue. When light comes in, some bounces off the top surface. Some light waves pass into the layer and reflect off the bottom surface. For most colours of light, waves reflecting from the top and bottom will be <span>out of phase,</span> and will cancel each other out. That light is removed. Blue light has just the right wavelength, and its reflected waves are in sync. This color makes it to our eye, making the butterfly appear blue. This hall of mirrors only lets blue light escape. It even has a pigment at its base that further absorbs stray red and green light to make the blue purer. </p>
     </div>
     <div>
-    <img src="images/image-13.png" alt="waves reflecting" class="images" style="height: 300px; text-align: right;">
+    <img src="image-13.png" alt="waves reflecting" class="images" style="height: 300px; text-align: right;">
     </div>
 </p>
 
