fixed last paragraph floating to right of image. cleafix hack.

--- a/entry-02/index.html
+++ b/entry-02/index.html
@@ -75,8 +75,8 @@
 
 <!-- section 05 -->
 <div>
-    <p class="body-text" style="text-align: center;">
-        So that's how we get this awesome, iridescent blue: the structure of the wing itself. All through the way light bends when it moves from air into another material. 
+    <p class="body-text" style="text-align: left;">
+        <br><br>So that's how we get this awesome, iridescent blue: the structure of the wing itself. All through the way light bends when it moves from air into another material. 
 
         Other artifacts from the natural world that also appear blue: blue eyes, bird feathers, etc also contain these microscopic structures. They're just arranged and bound together differently, giving a slightly different sheen to each living thing. All of them add and subtract light waves thanks to their internal structures, not due to their pigments. 
 
@@ -85,7 +85,7 @@
     </p>
 </div>
 
-
+<!-- sticky? -->
 
 </div>
 </div>
