added end common title

--- a/entry-02/index.html
+++ b/entry-02/index.html
@@ -86,6 +86,12 @@
 </div>
 
 <!-- sticky? -->
+<div>
+    <p class="common-title">
+        love letters to colour love letters to colour</p>
+</div>
+
+
 
 </div>
 </div>
