--- a/entry-02/index.html
+++ b/entry-02/index.html
@@ -80,7 +80,7 @@
 
         Other artifacts from the natural world that also appear blue: blue eyes, bird feathers, etc also contain these microscopic structures. They're just arranged and bound together differently, giving a slightly different sheen to each living thing. All of them add and subtract light waves thanks to their internal structures, not due to their pigments. 
 
-        <br><br>No vertebrate, not a single bird or mammal or reptile that we know of, makes a blue pigment on its body. In fact, there's only <span>one</span> butterfly that's cracked the code for producing a true, blue pigment: the Obrina olivewing. <span>Making blue one of the rarest colors in the natural world.</span>
+        <br><br>No vertebrate, not a single bird or mammal or reptile that we know of, makes a blue pigment on its body. In fact, there's only <span>one</span> butterfly that's cracked the code for producing a true, blue pigment: <a href="https://en.wikipedia.org/wiki/Nessaea_obrinus" class="underline">the Obrina olivewing.</a> <span>Making blue one of the rarest colors in the natural world.</span>
 
     </p>
 </div>
