added desktop fonts to font folder. added bg color and wrapper.

--- a/entry-03/index.html
+++ b/entry-03/index.html
@@ -12,3 +12,20 @@
       @import url("https://use.typekit.net/eft2qeb.css");
     </style>
   </head>
+
+  <!-- ------- -->
+
+<body>
+
+
+
+
+
+
+
+
+
+
+
+
+</body>
