added side banner + css styles

--- a/entry-03/index.html
+++ b/entry-03/index.html
@@ -16,7 +16,11 @@
   <!-- ------- -->
 
 <body>
+<!-- side banner -->
+   <div class="love-letters">
+    <p>love letters to colour love</p></div>
 
+<!-- main content-->
 
 
 
