wrapper. title of entry.

--- a/entry-03/index.html
+++ b/entry-03/index.html
@@ -23,6 +23,12 @@
 <!-- main content-->
 
 <div>
+<div class="wrapper">
+
+  <!-- title of entry -->
+  <div>
+    <p class="body-text" style="margin-top: 5em;"> <span>entry 03:</span> drama </p>
+  </div>
 
 
 
