added radium text

--- a/entry-03/index.html
+++ b/entry-03/index.html
@@ -34,7 +34,8 @@
     <div class="radium-square"></div>
 
     <div class="radium-text body-text">
-      <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).</p></div>
+      <p>Colours are beautiful. Some of the most brilliant colours throughout history have been some of the deadliest. Here’s some of them. 
+        <br><br>In 1898, Marie and Pierre Curie discovered radium. Claimed to have restorative properties, it was added to toothpaste, medicine, water, and food. It was the most luminous, glowing green. We started using it in beauty products and cosmetics. It wasn’t until the mid-20th century that we realized radium’s harmful effects as a radioactive element outweighed its remarkable visual benefits. </p></div>
 
   </div>
 
