section 02 lead white body text

--- a/entry-03/index.html
+++ b/entry-03/index.html
@@ -18,7 +18,7 @@
 <body>
 <!-- side banner -->
    <div class="love-letters">
-    <p>love letters to colour love</p></div>
+    <p>love letters to colour love </p></div>
 
 <!-- main content-->
 
@@ -28,6 +28,7 @@
   <div>
     <p class="body-text" style="margin-top: 5em;"> <span>entry 03:</span> drama </p>
   </div>
+
 
   <!-- radium green -->
   <div class="section-01">
@@ -39,9 +40,22 @@
 
   </div>
 
+
   <!-- lead white-->
+  <div class="section-02">
+
   
 
+    <div class="lead-text body-text">
+    <p> Lead white was the only practical choice for white oil or tempera paint, until the 19th century. To make paint, artists used to grind a block of lead into powder. And as far back as the 4th century BCE, the Greeks knew how to treat lead to make it the cogent pigment we know. However, this exposes highly toxic dust particles. In humans, lead is directly absorbed into the body and distributed to the body, soft tissues, and mineralized tissues. And once in the nervous system, it caused damages ranging from learning disabilities to blood pressure damages. This didn’t stop the practice of using this toxic pigment across times and cultures, though. Its glow, opacity, density and warm tone could not be matched. It was irresistible to Vermeer and the Impressionists, even when painters who used it complained of palsies, melancholy, coughing, enlarged retinas, and even blindness. It was widely used until it was banned in the 1970s. </p></div>
+
+    <div class="lead-square"></div>
+
+  </div>
+
+
+
+  <!-- other colour-->
 
 
 
@@ -53,5 +67,5 @@
 
 
 
-
+<!-- main content done-->
 </div></body>
