--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Harmonic Collection</title>
+    <title><i>harmonic collection</i></title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="reset.css">
     <meta charset="utf-08" />
@@ -14,6 +14,7 @@
       <li><a href="entry-01/index.html">Entry 01</a></li> 
       <li><a href="entry-02/index.html">Entry 02</a></li>
       <li><a href="entry-03/index.html">Entry 03</a></li>
+      <li><a href="entry-04/index.html">Entry 04</a></li>
     </ul>
   </body>
 </html>
