--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title><i>harmonic collection</i></title>
+    <title>harmonic collection</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="reset.css">
     <meta charset="utf-08" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
   </head>
   <body>
-    <h1>harmonic Collection</h1>
+    <h1><i>harmonic collection</i></h1>
     <p>anushka vhatkar</p>
     <ul>
       <li><a href="entry-01/index.html">Entry 01</a></li> 
