added default fonts. organized css doc. added image.

--- a/entry-04/index.html
+++ b/entry-04/index.html
@@ -3,7 +3,7 @@
 <!doctype html>
 <html>
 <head>
-    <title><entry-04></entry-04></title>
+    <title>entry 04</title>
     <link rel="icon" type="image/x-icon" href="/images/favicon.png">
     <link rel="stylesheet" href="../entry-04/style-04.css">
     <link rel="stylesheet" href="../styles/style.css">
@@ -16,7 +16,7 @@
   </head>
 
 <body>
-
+<p>hello hi</p>
 
 
 
