added header collection title

--- a/entry-04/index.html
+++ b/entry-04/index.html
@@ -16,12 +16,16 @@
   </head>
 
 <body>
-<p>hello hi</p>
+
+    <div class="header">
+      <p class="header-text"> love letters to colour</p>
+  </div>
+
+  <div class="body">
 
 
 
 
 
-
-
+</div>
 </body></html>
