added collection, title, entry title html

--- a/entry-04/index.html
+++ b/entry-04/index.html
@@ -17,11 +17,20 @@
 
 <body>
 
-    <div class="header">
-      <p class="header-text"> love letters to colour</p>
+    <div class="collection">
+      <p class="collection-title"> love letters to colour</p>
   </div>
 
   <div class="body">
+    <p style="margin-top: 3em;"> entry 04: conflict of interest</p>
+
+      <div>
+        
+      </div>
+
+
+  
+
 
 
 
