added html circle and pink text

--- a/entry-04/index.html
+++ b/entry-04/index.html
@@ -24,10 +24,13 @@
   <div class="body">
     <p style="margin-top: 3em;"> entry 04: conflict of interest</p>
 
-      <div>
-        
+      <div class="circle">
+
       </div>
 
+      <div>
+        <p>Pink is for girls and blue is for boys; the evidence seems to be everywhere. Amazingly enough though, this dated dichotomy only goes back to the mid-20th century. A few generations ago, the situation was completely different. In an article on baby clothes in the New York Times in 1893, the rule stated was that you should “always give pink to a boy and blue to a girl”. Neither the author or the interviewee were quite sure why. Perhaps, as the author hypothesizes, “The boy’s outlook is so much more roseate than the girl’s, that it is enough to make a girl baby blue to think of living a woman’s life In the world.”</p>
+      </div>
 
   
 
