added blue image. added second paragraph.

--- a/entry-04/index.html
+++ b/entry-04/index.html
@@ -32,6 +32,20 @@
         <p>Pink is for girls and blue is for boys; the evidence seems to be everywhere. Amazingly enough though, this dated dichotomy only goes back to the mid-20th century. A few generations ago, the situation was completely different. In an article on baby clothes in the New York Times in 1893, the rule stated was that you should “always give pink to a boy and blue to a girl”. Neither the author or the interviewee were quite sure why. Perhaps, as the author hypothesizes, “The boy’s outlook is so much more roseate than the girl’s, that it is enough to make a girl baby blue to think of living a woman’s life In the world.”</p>
       </div>
 
+      <div>
+        <img class="blue-frame" src="image-01.jpeg" alt="photo of boy wearing pink clothes and girl in blue clothes ">
+      </div>
+
+      <div>
+        <p>
+          In 1918, a trade publication affirmed that this was the “generally accepted rule”. Pink was, after all, the “more decided and stronger color,” while blue was “more delicate and dainty.” Probably closer to the real explanation (lol). Pink is just a faded red and in the era of scarlet-jacketed soldiers and red-robed cardinals probably the most masculine color. Blue was the signature hue of the Virgin Mary. Somewhere along the way, these associations have flipped.
+
+          <br><br>Either way, at what point do gender-specific stereotypes proliferate society? What control do we have over trends and the politicization of arbitrary selectors such as color and fonts?
+        </p>
+      </div>
+
+      
+
   
 
 
