--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       <li><a href="entry-02/index.html">Entry 02</a></li>
       <li><a href="entry-03/index.html">Entry 03</a></li>
       <li><a href="entry-04/index.html">Entry 04</a></li>
+      <li><a href="entry-05/index.html">Entry 05</a></li>
     </ul>
   </body>
 </html>
