added notes to organize sections

--- a/entry-05/index.html
+++ b/entry-05/index.html
@@ -14,12 +14,33 @@
   </head>
 
   <body>
+
     <header>
         <h1>love letters to colour</h1>
     </header>
 
-    
 
+    <!-- purple section -->
+    <section>
+        hello hi!
+    </section>
+
+    <!-- lime section -->
+    <section>
+        meep
+    </section>
+
+
+    <!-- purple section-->
+    <section>
+        juju
+    </section>
+
+
+    <!-- orange section -->
+    <section>
+        kiki
+    </section>
 
 
 
