added intro text

--- a/entry-05/index.html
+++ b/entry-05/index.html
@@ -19,6 +19,14 @@
         <h1>love letters to colour</h1>
     </header>
 
+    <!-- love letters to collection title-->
+    <aside>
+        <p>entry 05: developments
+
+        <br><br>Until the mid-1800s, all dyes came from natural sources, such as insects, roots, or minerals. Producing them was difficult and expensive.</p>
+    </aside>
+
+
 
     <!-- purple section -->
     <section>
