corrected html organisation

--- a/entry-05/index.html
+++ b/entry-05/index.html
@@ -15,11 +15,12 @@
 
   <body>
 
+    <!-- love letters collection title -->
     <header>
         <h1>love letters to colour</h1>
     </header>
 
-    <!-- love letters to collection title-->
+    <!-- intro text -->
     <aside>
         <p>entry 05: developments
 
