--- a/entry-05/index.html
+++ b/entry-05/index.html
@@ -31,24 +31,24 @@
 
     <!-- purple section -->
     <section>
-        hello hi!
+        <p>hello hi!</p>
     </section>
 
     <!-- lime section -->
     <section>
-        meep
+        <p>meep</p>
     </section>
 
 
     <!-- purple section-->
     <section>
-        juju
+        <p>juju</p>
     </section>
 
 
     <!-- orange section -->
     <section>
-        kiki
+        <p>kiki</p>
     </section>
 
 
