added first image and caption

--- a/entry-05/index.html
+++ b/entry-05/index.html
@@ -25,6 +25,11 @@
         <p>entry 05: developments
 
         <br><br>Until the mid-1800s, all dyes came from natural sources, such as insects, roots, or minerals. Producing them was difficult and expensive.</p>
+
+        <figure>
+            <img src="image-06.jpeg" alt="“Milking” Plicopurpura pansa for natural purple dye" class="border-purple"> 
+            <figcaption><span>image 01:</span> “Milking” Plicopurpura pansa, Oaxaca, Mexico. © Fulvio Eccardi</figcaption>
+        </figure>
     </aside>
 
 
