added intro text

--- a/entry-05/index.html
+++ b/entry-05/index.html
@@ -21,16 +21,18 @@
     </header>
 
     <!-- intro text -->
-    <aside>
+    <section>
         <p>entry 05: developments
 
         <br><br>Until the mid-1800s, all dyes came from natural sources, such as insects, roots, or minerals. Producing them was difficult and expensive.</p>
 
         <figure>
             <img src="image-06.jpeg" alt="“Milking” Plicopurpura pansa for natural purple dye" class="border-purple"> 
-            <figcaption><span>image 01:</span> “Milking” Plicopurpura pansa, Oaxaca, Mexico. © Fulvio Eccardi</figcaption>
+            <figcaption><span>image 01:</span> “Milking” Plicopurpura pansa, Oaxaca, Mexico. </figcaption>
         </figure>
-    </aside>
+
+        <p><br>Sea snails like these are found around the world. When poked (milked) or crushed, they secrete a substance that was used for making purple dye as early as 1570 BC. Thousands of snails were needed to color a single robe, and for centuries purple dye was more valuable than silver and worn only by royalty.</p>
+    </section>
 
 
 
