--- a/entry-05/index.html
+++ b/entry-05/index.html
@@ -31,7 +31,7 @@
             <figcaption><span>image 01:</span> “Milking” Plicopurpura pansa, Oaxaca, Mexico. </figcaption>
         </figure>
 
-        <p><br>Sea snails like these are found around the world. When poked (milked) or crushed, they secrete a substance that was used for making purple dye as early as 1570 BC. Thousands of snails were needed to color a single robe, and for centuries purple dye was more valuable than silver and worn only by royalty.</p>
+        <p>Sea snails like these are found around the world. When poked (milked) or crushed, they secrete a substance that was used for making purple dye as early as 1570 BC. Thousands of snails were needed to color a single robe, and for centuries purple dye was more valuable than silver and worn only by royalty.</p>
     </section>
 
 
