added purple section image

--- a/entry-05/index.html
+++ b/entry-05/index.html
@@ -39,6 +39,11 @@
     <!-- purple section -->
     <section>
         <p>hello hi!</p>
+        <figure>
+            <img src="image-07.jpeg" alt="image of cotton yarn naturally dyed with tixinda dye" class="border-off-white">
+                <figcaption><span>image 02:</span> Cotton yarn with tixinda dye, 2012 Pinotepa de Don Luis, Oaxaca, Mexico. Gift of Marilyn Murphy, www.clothroads.com</figcaption>
+        </figure>
+
     </section>
 
     <!-- lime section -->
