added purple section text HTML

--- a/entry-05/index.html
+++ b/entry-05/index.html
@@ -44,6 +44,7 @@
                 <figcaption><span>image 02:</span> Cotton yarn with tixinda dye, 2012 Pinotepa de Don Luis, Oaxaca, Mexico. Gift of Marilyn Murphy, www.clothroads.com</figcaption>
         </figure>
 
+        <p>Mixtec weavers in Oaxaca, Mexico, color locally grown cotton with natural dyes — including the rare purple tixinda, extracted from the Plicopurpura pansa mollusk. The introduction of synthetic dyes and the decline of mollusk populations have greatly reduced the production of natural purple dye.</p>
     </section>
 
     <!-- lime section -->
