--- a/entry-05/index.html
+++ b/entry-05/index.html
@@ -50,6 +50,9 @@
     <!-- lime section -->
     <section>
         <p>meep</p>
+        <p>But woah, synthetic dyes?</p>
+        <p><br>In 1856, an 18-year-old English chemist, William Henry Perkin, accidentally discovered one of the first synthetic dyes. In search of a treatment for malaria, Perkin experimented with coal tar, a thick, dark liquid by-product of coal-gas production. His experiment failed but left behind an oily residue that stained silk a brilliant purple. He called the dye mauveine.</p>
+
     </section>
 
 
