--- a/entry-05/index.html
+++ b/entry-05/index.html
@@ -53,6 +53,10 @@
         <p>But woah, synthetic dyes?</p>
         <p><br>In 1856, an 18-year-old English chemist, William Henry Perkin, accidentally discovered one of the first synthetic dyes. In search of a treatment for malaria, Perkin experimented with coal tar, a thick, dark liquid by-product of coal-gas production. His experiment failed but left behind an oily residue that stained silk a brilliant purple. He called the dye mauveine.</p>
 
+        <figure>
+            <img class="border-purple" src="image-05.jpeg" alt="swatch of perkins purple dye">
+            <figcaption> <span>image 03: </span> “Perkin mauve” dyed silk, 1860. Photo courtesy of National Museum of American History</figcaption>
+        </figure>
     </section>
 
 
